feat: generate otp route added
