# docs/swagger.json
@@ -43,6 +43,46 @@
                 }
             }
         },
+        "/v1/generate-otp": {
+            "post": {
+                "description": "Sends Otp To User",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Send Otp",
+                "parameters": [
+                    {
+                        "description": "OtpRequest",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.OtpRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/login": {
             "post": {
                 "description": "Login for User",
@@ -156,6 +196,10 @@
     "definitions": {
         "auth.LoginRequest": {
             "type": "object",
+            "required": [
+                "password",
+                "user_name"
+            ],
             "properties": {
                 "password": {
                     "type": "string"
@@ -178,6 +222,17 @@
                     "type": "string"
                 },
                 "old_device_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.OtpRequest": {
+            "type": "object",
+            "required": [
+                "user_name"
+            ],
+            "properties": {
+                "user_name": {
                     "type": "string"
                 }
             }
@@ -228,6 +283,15 @@
             "type": "object",
             "properties": {
                 "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.SuccessResponse": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "msg": {
                     "type": "string"
                 }
             }
